--- a/app/views/finance/fee_collection_batch_update.js.haml
+++ b/app/views/finance/fee_collection_batch_update.js.haml
@@ -1,1 +1,1 @@
-jQuery('#batchs').html(#{escape_javascript render 'fee_collection_batchs'})
+$('#batchs').html('#{escape_javascript render 'fee_collection_batchs'}')
