--- a/app/views/employee/_one_click_payslip_date.haml
+++ b/app/views/employee/_one_click_payslip_date.haml
@@ -17,7 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 :javascript
-  $jq = jQuery.noConflict();
+  $jq = $.noConflict();
   $jq(document).ready(function() {
     $jq("#salary_date").datepicker({dateFormat: 'yy-mm-dd'});
   });
