--- a/app/views/employee/_one_click_payslip_revert_date.haml
+++ b/app/views/employee/_one_click_payslip_revert_date.haml
@@ -19,7 +19,7 @@
 %script{:src => "/javascripts/jquery-1.3.2.min.js", :type => "text/javascript"}
 %script{:src => "/javascripts/jquery-ui.min.js", :type => "text/javascript"}
 :javascript
-  $jq = jQuery.noConflict();
+  $jq = $.noConflict();
   $jq(document).ready(function() {
     $jq("#salary_date").datepicker({dateFormat: 'yy-mm-dd'});
   });
