--- a/app/views/finance/load_discount_create_form.js.haml
+++ b/app/views/finance/load_discount_create_form.js.haml
@@ -1,7 +1,7 @@
 - if ["batch_wise", "category_wise", "student_wise"].include?(params[:type])
-  jQuery("#form-box").html(#{escape_javascript( render "#{params[:type]}_discount_form")})
-  jQuery('#form-errors').html("")
+  $("#form-box").html('#{escape_javascript( render "#{params[:type]}_discount_form")}')
+  $('#form-errors').html("")
 - else
-  jQuery("#form-box").html("")
-  jQuery('#form-errors').html("")
+  $("#form-box").html("")
+  $('#form-errors').html("")
 
