--- a/app/views/employee/_select_department.haml
+++ b/app/views/employee/_select_department.haml
@@ -37,9 +37,6 @@
 .label-field-pair
   %label{:for => "department_name"}= t('department')
   .text-input-bg
-    = select :subject_assignment, :department_id, @departments.map { |s| [s.name, s.id] }, |
-      {:prompt => "#{t('select_a_department')}"},                                          |
-      {:onChange => "#{remote_function(:url => {:action => "update_employees"},            |
-      :with => "'department_id='+value+'&subject_id=#{@subject.id}'")}"}                   |
+    = select :subject_assignment, :department_id, @departments.map { |s| [s.name, s.id] },{:prompt => "#{t('select_a_department')}"},{onChange: "onChangeRequest(this, '#{url_for(action: :update_employees, department_id: 'paramid', subject_id: @subject.id)}')"}
 #employee-list
 .extender
