--- a/app/views/employee/_payslip_category_list.haml
+++ b/app/views/employee/_payslip_category_list.haml
@@ -16,12 +16,10 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #list-payslip-category
   = render :partial=>"list_payslip_category"
 .extender
 #add-payslip-category-link
-  = link_to_remote "► #{t('add_new_category')}",                                           |
-    :update => "payslip-category-form",                                                    |
-    :url => {:action => "add_payslip_category"},                                           |
-    :with=>"'emp_id=#{emp_id}&salary_date=#{salary_date}'", :html=>{:class=>'user_button'} |
+  = link_to "► #{t('add_new_category')}", {:action => "add_payslip_category", :emp_id => emp_id, :salary_date => @salary_date, :html => {:class => 'user_button'}}, :remote => true
 #payslip-category-form
