--- a/app/views/employee/_subjects.html.haml
+++ b/app/views/employee/_subjects.html.haml
@@ -21,4 +21,4 @@
   .text-input-bg
     = select :subject_assignment, :subject_id, @subjects.map { |s| [s.name, s.id] },                                               |
       { prompt: t('select_a_subject')},                                                                                            |
-      { onChange: "#{remote_function( url: { action: "select_department", subject_id: "value"}, :with => "'subject_id='+value")}"} |
+      { onChange: "onChangeRequest(this,  '#{url_for(action: :select_department, subject_id: 'paramid')}')"} |
