--- a/app/views/employee/payslip.haml
+++ b/app/views/employee/payslip.haml
@@ -17,7 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 #content-header
-  = image_tag("  HR/show_hr.png")
+  = image_tag("HR/show_hr.png")
   %h1= t('payslip_text')
   %h3= t('create_text')
   #app-back-button
@@ -38,16 +38,10 @@
       .link-heading= link_to "#{t('rejected_employee')}", {:controller=>"employee", :action=>"rejected_payslip"}
       .link-descr= t('link_desc4')
     .link-box
-      .link-heading= link_to_remote "#{t('one_click_payslip')}",:update=>"message-div", |
-          :before => "Element.show('loader')",                               |
-          :success => "Element.hide('loader')",                              |
-          :url=>{:controller=>"employee", :action=>"payslip_date_select"}    |
+      .link-heading= link_to "#{t('one_click_payslip')}",:update=>"message-div",:before => "Element.show('loader')",:success => "Element.hide('loader')",:url=>{:controller=>"employee", :action=>"payslip_date_select", :remote => true}
       .link-descr= t('link_desc2')
     .link-box
-      .link-heading= link_to_remote "#{t('one_click_payslip_revert')}",:update=>"message-div",                                 |
-          :before => "Element.show('loader')",                                                                      |
-          :success => "Element.hide('loader')",                                                                     |
-          :url=>{:controller=>"employee", :action=>"payslip_revert_date_select"},:confirm=>"#{t('revert_confirm')}" |
+      .link-heading= link_to "#{t('one_click_payslip_revert')}",:update=>"message-div", :before => "Element.show('loader')",:success => "Element.hide('loader')", :url=>{:controller=>"employee", :action=>"payslip_revert_date_select", :remote => true},:confirm=>"#{t('revert_confirm')}"
       .link-descr= t('link_desc3')
     .extender
     .loader-image
