--- a/app/views/employee/edit_rejected_payslip.html.haml
+++ b/app/views/employee/edit_rejected_payslip.html.haml
@@ -27,26 +27,23 @@
     %p.flash-msg
       = flash[:notice]
   #form-content
-    = form_for :manage_payroll do |s|
+    = form_for(:manage_payroll, :url => {:id => @employee.id}) do |s|
       .payslip-field-pair
         %label{:for => "salary_date"}= t('salary_date')
         .payslip-input-bg
-          = calendar_date_select_tag 'salary_date', @salary_date, |
-            :year_range => 2.years.ago..0.years.from_now          |
+          = date_select 'salarydate', I18n.l(Date.today,:format=>:default),:year_range => 2.years.ago..0.years.from_now
       - @independent_categories.each do |c|
         - val = MonthlyPayslip.find_by_employee_id_and_payroll_category_id_and_salary_date(@employee, c, @salary_date)
         .payslip-field-pair
           %label{:for => "payroll_category_name"}= c.name
-          .payslip-input-bg= s.text_field :amount, :index => c.id, :value => (val.nil? ? 0 : val.amount),                           |
-              :onChange=> "#{remote_function(:url  => {:controller=>"payroll",:action => "update_dependent_fields"}, |
-              :with => "'amount='+ value + '&cat_id=' + #{c.id}")}"                                                  |
+          .payslip-input-bg= s.text_field :amount, :index => c.id, :value => (val.nil? ? 0 : val.amount), :onChange => "onChangeRequest(this, '#{url_for(:controller => "payroll", :action => "update_dependent_fields", :amount => 'paramid', :cat_id => c.id)}')"
+
       - @dependent_categories.each do |c|
         - val = MonthlyPayslip.find_by_employee_id_and_payroll_category_id_and_salary_date(@employee, c, @salary_date)
         .payslip-field-pair
           %label{:for => "payroll_category_name"}= c.name
-          .payslip-input-bg= s.text_field :amount, :index => c.id, :value => (val.nil? ? 0 : val.amount),                           |
-              :onChange=> "#{remote_function(:url  => {:controller=>"payroll",:action => "update_dependent_fields"}, |
-              :with => "'amount='+ value + '&cat_id=' + #{c.id}")}"                                                  |
+          .payslip-input-bg= s.text_field :amount, :index => c.id, :value => (val.nil? ? 0 : val.amount), 
+          :onChange => "onChangeRequest(this, '#{url_for(:controller => "payroll", :action => "update_dependent_fields", :amount => 'paramid', :cat_id => c.id)}')"
       #submit-button
         = submit_tag("► #{t('create_text')}")
       .extender
