--- a/app/views/employee/view_rejected_payslip.html.haml
+++ b/app/views/employee/view_rejected_payslip.html.haml
@@ -16,8 +16,9 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
-  = image_tag("  HR/show_hr.png")
+  = image_tag("HR/show_hr.png")
   %h1
     = t('rejected_payslip')
   %h3= t('individual_employee')
@@ -33,9 +34,6 @@
   .drop-down-box
     %label{:for => "category_prefix"}= t('select_payslip_month_year')
     .text-input-bg
-      = select :employee, :rejected_payslip, @payslips.map { |s| [s.salary_date.strftime("%B %Y"), s.salary_date] }, |
-        {:prompt => "#{t('select_a_month')}"},                                                                       |
-        {:onChange => "#{remote_function(:url => {:action => "update_rejected_payslip"},                             |
-        :with => "'salary_date='+value+'&emp_id='+#{params[:id]}")}"}                                                |
+      = select :employee, :rejected_payslip, @payslips.map { |s| [s.salary_date.strftime("%B %Y"), s.salary_date] }, {:prompt => "#{t('select_a_month')}"}, {:onChange => "onChangeRequest(this, '#{url_for(action: :update_rejected_payslip, salary_date: 'paramid', emp_id: params[:id])}')"}
   .extender
   #rejected_payslip
