--- a/app/views/employee_attendance/employee_leave_reset_all.haml
+++ b/app/views/employee_attendance/employee_leave_reset_all.haml
@@ -16,8 +16,9 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
-  = image_tag("  HR/leave-new.png")
+  = image_tag("HR/leave-new.png")
   %h1= t('full_leave_reset')
   %h3= t('reset_leave_count_for_all')
   #app-back-button
@@ -38,7 +39,6 @@
         %p
           = t('reset_count_msg')
         #skip
-          = link_to_remote("► #{t('reset')}",                                                         |
-            :url => {:action =>'update_employee_leave_reset_all'}, :html => {:class=>"user_button"} ) |
+          = link_to "► #{t('reset')}", {:action =>'update_employee_leave_reset_all', :remote => true}, {:class=>"user_button"}
         %div
           = link_to "► #{t('cancel')}", { :action => "manual_reset"}, :class=>"user_button"
