--- a/app/views/employee_attendance/employee_leave_reset_by_department.haml
+++ b/app/views/employee_attendance/employee_leave_reset_by_department.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
   = image_tag("HR/leave-new.png")
   %h1= t('dept_leave_reset')
@@ -36,8 +37,5 @@
     = form_for :employee_department do |s|
       .label-field-pair
         %label{:for => "employee_department_select"}= t('select_the_department')
-        .text-input-bg= select :employee_department, :department_id, @departments.map {|c| [c.name, c.id]},  |
-            {:prompt => "#{t('select_the_department')}"},                                        |
-            {:onChange => "#{remote_function(:url => {:action => "list_department_leave_reset"}, |
-            :with => "'department_id='+value")}"}                                                |
+        .text-input-bg= select :employee_department, :department_id, @departments.map {|c| [c.name, c.id]},{:prompt => "#{t('select_the_department')}"}, {onChange: "onChangeRequest(this, '#{url_for(action: :list_department_leave_reset, department_id: 'paramid')}')"}
     #department-list
