--- a/app/views/employee_attendance/leave_reset_settings.haml
+++ b/app/views/employee_attendance/leave_reset_settings.haml
@@ -49,6 +49,6 @@
         .text-input-bg
           - if @last_reset.config_value.nil?
             - @last_reset.config_value= @fin_start_date.config_value
-          = calendar_date_select_tag 'configuration[financial_year_start_date]',  I18n.l(@last_reset.config_value.to_date || @fin_start_date.config_value.to_date,:format=>:default)
+          = date_select 'configuration[financial_year_start_date]',  I18n.l(@last_reset.config_value.to_date || @fin_start_date.config_value.to_date,:format=>:default)
       #submit-button
         = submit_tag "► #{t('update')}"
