--- a/app/views/employee/admission1.haml
+++ b/app/views/employee/admission1.haml
@@ -28,7 +28,7 @@
       = flash[:notice]
   - unless @last_admitted_employee.nil?
     %p.flash-msg= "#{t('last_employee_number')} #{@last_admitted_employee.employee_number}"
-  = form_for(:employee, @employee, :url => {:action=> 'admission1'}, |
+  = form_for(:employee, :url => {:action=> 'admission1'}, |
     :html=> {:multipart=>true}) do |a|                               |
     = error_messages_for  :employee
     #admission1_form
@@ -50,8 +50,7 @@
       %hr.label-underline/
       .label-field-pair
         %label{:for => "employee_joining_date"}= t('joining_date')
-        .text-input-bg= calendar_date_select_tag 'employee[joining_date]', I18n.l(Date.today,:format=>:default), |
-            :year_range => 25.years.ago..0.years.from_now , :popup=>"force"                          |
+        .text-input-bg= date_select 'employee[joining_date]', I18n.l(Date.today,:format=>:default),:max_year_allowed => 100 
       %hr.label-underline/
       .label-field-pair
         %label{:for => "employee_name"}
@@ -84,8 +83,8 @@
         %label{:for => "dob"}
           = t('date_of_birth')
           %span.necessary-field *
-        .text-input-bg= calendar_date_select_tag 'employee[date_of_birth]', I18n.l(Date.today-10.years,:format=>:default), |
-            :year_range => 70.years.ago..4.years.ago, :popup=>"force"                                          |
+        .text-input-bg= date_select 'employee[date_of_birth]', I18n.l(Date.today-10.years,:format=>:default), |
+            :start_year => Date.today.year - 50, :popup=>"force"                                          |
       %hr.label-underline/
       .label-field-pair
         %label{:for => "employee_department"}
@@ -99,7 +98,7 @@
           %span.necessary-field *
         .text-input-bg= select :employee, :employee_category_id, @categories.map { |s| [s.name, s.id] },                              |
             {:prompt => "#{t('select')}"},                                                                                |
-            {:onChange => "#{remote_function(:url => {:action => "update_positions"}, :with => "'category_id='+value")}"} |
+            {onChange: "onChangeRequest(this,  '#{url_for(action: :update_positions, category_id: 'value')}')"} |
       %hr.label-underline/
       .label-field-pair
         %label{:for => "employee_position"}
