--- a/app/views/employee/admission3.haml
+++ b/app/views/employee/admission3.haml
@@ -17,7 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 #content-header
-  = image_tag("  HR/show_hr.png")
+  = image_tag("HR/show_hr.png")
   %h1= t('employee_admission')
   %h3= t('step_3')
   #app-back-button
@@ -26,7 +26,7 @@
   - unless flash[:notice].nil?
     %p.flash-msg
       = flash[:notice]
-  = form_for :employee_bank_details do |a|
+  = form_for(:employee_bank_details, :url => {:id => @employee.id}) do |a|
     = error_messages_for 'employee_bank_details'
     #form-contents
       %span.span-sub-heading= t('add_bank_detail')
