--- a/app/views/employee/admission4.haml
+++ b/app/views/employee/admission4.haml
@@ -16,17 +16,29 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
 #content-header
-  = image_tag("  HR/show_hr.png")
+  = image_tag("HR/show_hr.png")
   %h1= t('select_reporting_manager')
   %h3= t('step_5')
   #app-back-button
     = back_button
 :javascript
-  function update_reporting_manager(id) { $('employee_reporting_manager_id').value = id; }
+  function update_reporting_manager(id) { document.getElementById('employee_reporting_manager_id').value = id.value; }
+  function get_reporting_manager_id() { var query = document.getElementById('query').value;
+                                        var dept = document.getElementById('employee_department_id').value;
+                                        var cat = document.getElementById('employee_category_id').value;
+                                        var position = document.getElementById('employee_position_id').value;
+                                        var grade = document.getElementById('employee_grade_id').value;
+                                        $.ajax({ type: "GET",   
+                                                url: "select_reporting_manager",
+                                                data: { query: query, employee_department_id: dept, employee_category_id: cat, employee_position_id: position, employee_grade_id: grade} ,
+                                               
+                                       });
+                                       }
 #page-yield
   #form-content
-    = form_for :employee do |e|
+    = form_for(:employee, :url=> {:id=> @employees.id}) do |e|
       #current-changed-manager
         #changed-manager-outer
           #changed-manager
@@ -43,27 +55,18 @@
         #search-label
           = t('search_by_name')
                       :
-        #search-text-box= text_field_tag("query", params['query'], :autocomplete => 'off')
+        #search-text-box= text_field_tag("query", params['query'], :autocomplete => 'off', :onChange => "onChangeRequest(this, '#{url_for(action: :update_reporting_manager_name , employee_reporting_manager_id: 'paramid')}')")
         = image_tag("loader.gif",      |
           :align => "absmiddle",       |
           :border => 0,                |
           :id => "loader",             |
           :style => "display: none;" ) |
         .extender
-      = observe_fields ['employee_reporting_manager_id'], |
-        :frequency => 0.1,                                |
-        :update => 'changed-manager-name',                |
-        :url=> {:action=>'update_reporting_manager_name'} |
       #advanced-options
-        .employee-search-options= select :employee, :department_id, @departments.map {|s| [s.name, s.id]}, :prompt => "#{t('select_department')}"
-        .employee-search-options= select :employee, :category_id,   @categories.map {|s| [s.name, s.id]},  :prompt => "#{t('select_category')}"
-        .employee-search-options= select :employee, :position_id,   @positions.map {|s| [s.name, s.id]},   :prompt => "#{t('select_position')}"
-        .employee-search-options= select :employee, :grade_id,      @grades.map {|s| [s.name, s.id]},      :prompt => "#{t('select_grade')}"
+        .employee-search-options= select :employee, :department_id, @departments.map { |s| [s.name, s.id] },{:prompt => "#{t('select_a_department')}"},{onChange: "get_reporting_manager_id();"}
+        .employee-search-options= select :employee, :category_id, @categories.map { |s| [s.name, s.id] },{:prompt => "#{t('select_category')}"},{onChange: "get_reporting_manager_id();"}
+        .employee-search-options= select :employee, :position_id, @positions.map { |s| [s.name, s.id] },{:prompt => "#{t('select_position')}"},{onChange: "get_reporting_manager_id();"}
+        .employee-search-options= select :employee, :grade_id, @grades.map { |s| [s.name, s.id] },{:prompt => "#{t('select_grade')}"},{onChange: "get_reporting_manager_id();"}
+                        
         .extender
-    = observe_fields ['query', 'employee_department_id','employee_category_id', 'employee_position_id', 'employee_grade_id'], |
-      :frequency => 0.1,                                                                                                      |
-      :update => 'information',                                                                                               |
-      :before => "Element.show('loader')",                                                                                    |
-      :success => "Element.hide('loader')",                                                                                   |
-      :url => {:action => 'select_reporting_manager'}                                                                         |
-  #information
+      #information
